Remove logging. Migrate styles.

--- a/core/webapp/stylesheet.css
+++ b/core/webapp/stylesheet.css
@@ -891,6 +891,44 @@ span.labkey-help-pop-up
     border: 5px solid #e0e6ea;
 }
 
+/* Login screen*/
+.auth-header {
+    font-family: Arial, Helvetica, sans serif;
+    font-size: 14pt;
+}
+
+.auth-form {
+    padding: 10px 20px;
+}
+
+.auth-form-body {
+    width: 350px;
+    margin-top: 15px;
+    font-family: Arial, sans-serif;
+}
+
+.auth-item {
+    margin-top: 15px;
+}
+
+.auth-form-body label {
+    font-weight: bold;
+}
+
+.auth-form-body input[type="text"],
+.auth-form-body input[type="password"] {
+    border: 1px solid #A0A0A0;
+    vertical-align: middle;
+    padding: 7px 8px;
+}
+
+.input-block {
+    display: block;
+    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 15px;
+}
+
 /* Used for the middle part of full-screen pages */
 .labkey-dialog-body
 {
