Support terms of use in AJAX login.

--- a/core/webapp/stylesheet.css
+++ b/core/webapp/stylesheet.css
@@ -913,6 +913,7 @@ span.labkey-help-pop-up
 
 .auth-form-body label {
     font-weight: bold;
+    font-family: Arial, sans-serif;
 }
 
 .auth-form-body input[type="text"],
