Visualization: add square binning. Change to LABKEY.vis.Geom.Bin with 'shape' configuration.

--- a/core/webapp/stylesheet.css
+++ b/core/webapp/stylesheet.css
@@ -3546,8 +3546,15 @@ a.x4-menu-item-link {
 }
 
 /* Visualization Library */
-.hexagon {
+.vis-bin-hexagon {
     fill: none;
     stroke: #000;
     stroke-width: .5px;
 }
+
+.vis-bin-square {
+    fill: none;
+    stroke: #000;
+    stroke-width: .5px;
+}
+
