Issue 20282: ClassCastException from org.labkey.api.util.ImageUtil.webImage() Issue 21739: fix escaping issue in miniprofiler

--- a/internal/webapp/internal/MiniProfiler/miniprofiler.tmpl
+++ b/internal/webapp/internal/MiniProfiler/miniprofiler.tmpl
@@ -128,13 +128,13 @@
           <td class="profiler-info">
             <div>Object allocations</div>
             <div>
-              <a href="{{= this.allocationsUrl(it.id) }}" target="_blank">
+              <a href="{{! this.allocationsUrl(it.id) }}" target="_blank">
                 details
               </a>
             </div>
           </td>
           <td>
-            <pre>{{= this.formatAllocations(it.objects, false) }}</pre>
+            <pre>{{! this.formatAllocations(it.objects, false) }}</pre>
           </td>
         </tr>
         {{?}}
