- Secure Issue 22267: **Luminex Levey-Jennings plots fail to render with SQL parsing error when assay design is missing fields - Fix Levey-Jennings Report and QCFlagToggle CSS scoping issues - Better handling and display of error messages in Levey-Jennings Report

--- a/experiment/webapp/Experiment/QCFlagToggle.css
+++ b/experiment/webapp/Experiment/QCFlagToggle.css
@@ -1,7 +1,8 @@
-.x-grid3-row td {
+.qcflagtoggle .x-grid3-row td {
     line-height: 20px;
 }
 
-.x-grid3-cell-inner, .x-grid3-hd-inner {
+.qcflagtoggle .x-grid3-cell-inner,
+.qcflagtoggle .x-grid3-hd-inner {
     white-space:normal !important;
 }
