Fix additional client dependencies.

--- a/core/resources/views/ModulePropertyAdmin.view.xml
+++ b/core/resources/views/ModulePropertyAdmin.view.xml
@@ -2,4 +2,8 @@
     <permissions>
         <permission name="update" />
     </permissions>
+    <dependencies>
+        <dependency path="Ext4"/>
+        <dependency path="ModulePropertiesAdminPanel.js"/>
+    </dependencies>
 </view>
