--- a/announcements/webapp/announcements/EditTour.css
+++ b/announcements/webapp/announcements/EditTour.css
@@ -5,26 +5,26 @@
  */
 
 .uxtour .leftcolumn {
-    position:       absolute;
-    width:          550px;
-    top:            0px;
-    left:           0px;
+    position: absolute;
+    width: 550px;
+    top: 0;
+    left: 0;
 }
 
 .uxtour .rightcolumn {
-    position:       absolute;
-    top:            0px;
-    left:           550px;
+    position: absolute;
+    top: 0;
+    left: 550px;
 }
 
 .uxtour .tablewrapper {
-    position:       relative;
-    margin-left:    10px;
-    margin-top:     10px;
+    position: relative;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 
 .uxtour .col-width {
-    width:          100%;
+    width: 100%;
 }
 
 .uxtour .row {
@@ -32,23 +32,23 @@
 }
 
 .uxtour .label {
-    width:          150px;
-    margin-right:   5px;
-    margin-bottom:  10px;
+    width: 150px;
+    margin-right: 5px;
+    margin-bottom: 10px;
 }
 
 .uxtour .input {
-    width:          473px;
-    margin-right:   5px;
+    width: 473px;
+    margin-right: 5px;
 }
 
 .uxtour .select {
-    width:          473px;
-    margin-right:   5px;
+    width: 473px;
+    margin-right: 5px;
 }
 
 .uxtour .button-row {
-    padding-top:       10px;
-    padding-bottom:    15px;
+    padding-top: 10px;
+    padding-bottom: 15px;
 }
 
