Issues 22538, 22537, 22536, 22535: Tours editor and query view bug fixes.

--- a/announcements/webapp/announcements/EditTour.css
+++ b/announcements/webapp/announcements/EditTour.css
@@ -43,12 +43,16 @@
 }
 
 .uxtour .select {
-    width: 473px;
+    width: 478px;
     margin-right: 5px;
 }
 
 .uxtour .button-row {
     padding-top: 10px;
     padding-bottom: 15px;
+}
+
+.uxtour .labkey-status-info {
+    width: 478px;
 }
 
