Spec #22539: Convert customize view to Ext4 - no conversion to Ext4 yet, just splitting code into separate files - duplicate customize view designer code and wire up to experimental DataRegion

--- a/internal/webapp/groupTabPanel/UngroupedTab.css
+++ b/internal/webapp/groupTabPanel/UngroupedTab.css
@@ -34,4 +34,5 @@
 }
 
 .vertical-tabs.x-tab-panel-right .x-tab-panel-header ul.x-grouptabs-strip a.x-grouptabs-text {
-    text-align:left;
+    text-align: left;
+}
